--- a/index.html
+++ b/index.html
@@ -1,66 +1,371 @@
 <!doctype html>
-<html lang="en">
-<head>
-    <meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="description" content="A layout example that shows off a responsive pricing table.">
-    <title>Ideation Networks -  open source software, open data, open hardware, and open standards</title>
-<link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.3.0/pure-min.css">
-<link rel="stylesheet" href="css/layouts/pricing.css">
-</head>
-<body>
-<div class="banner">
-    <h1 class="banner-head">
-        Ideation Networks.<br>
-         open&nbsp;source&nbsp;software, open&nbsp;data, open&nbsp;hardware, and open&nbsp;standards.
-    </h1>
-</div>
+<html class="no-js" lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Ideation Networks - Quality Drupal Development - Est 2007</title>
+    <link rel="stylesheet" href="stylesheets/app.css" />
+    <script src="bower_components/modernizr/modernizr.js"></script>
+  </head>
+  <body>
+    <div class="row">
+      <div class="large-12 columns">
+        <h1>Ideation Networks <small>Est. 2007</small></h1>
+      </div>
+    </div>
 
-<div class="l-content">
+    <div class="row">
+      <div class="large-6 medium-6 columns">
+        <div class="">
+          <h3>Open source software, open data, open hardware, and open standards</h3>
+          <p>We choose open source because we believe in Freedom. Open source gives us adaptability, interoperability, and options. It helps us prepare for the future.</p>
+          <p>Proprietary systems and data formats create lock-in where vendors build their business models around selling you licenses to access your own systems and data.</p>
+          <p>We do things differently. We build our business models on providing value.</p>
+          <p>We like to work on projects that do good. Our clients like to work with us because of the insight we offer, our methodical reasoning, and ability to generate novel solutions. </p>
+        </div>
+      </div>
+      <div class="large-6 medium-6 columns">
 
 
-    <div class="information pure-g-r">
 
-        <div class="pure-u">
-<p>
-I created Ideation Networks because I wanted to bring open source solutions to people who needed them. I wanted to save people from proprietary vendor lock in and promote interoperability and openness.
+    <div class="row">
+      <div class="large-12 medium-12 columns">
+        <h5>Clients include</h5>
+
+        <div class="row">
+          <div class="large-3 medium-3 small-3 columns">
+            <div class="">
+              <p><img src="img/ElsevierlogoBlack.png" alt=""></p>
+            </div>
+          </div>
+          <div class="large-4 medium-4 small-4 columns">
+            <div class="">
+              <p><img src="img/sm/ctvc_logo.jpg" alt=""></p>
+            </div>
+          </div>
+          <div class="large-5 medium-5 small-5 columns">
+            <div class="">
+              <p><img src="img/sm/viacom_logo.jpg" alt=""></p>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="large-4 medium-4 small-4 columns">
+            <div class="">
+              <p><img src="img/sm/vam_logo.jpg" alt=""></p>
+            </div>
+          </div>
+
+          <div class="large-4 medium-4 small-4 columns">
+            <div class="">
+              <p><img src="img/sm/mtv_logo.jpg" alt=""></p>
+            </div>
+          </div>
+          <div class="large-4 medium-4 small-4 columns">
+            <div class="">
+              <p><img src="img/sm/bpf_logo.jpg" alt=""></p>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+
+          <div class="large-3 medium-3 small-3 columns">
+            <div class="">
+              <p><img src="img/sm/gaystarnews-logo.jpg" alt=""></p>
+            </div>
+          </div>
+          <div class="large-3 medium-3 small-3 columns">
+            <div class="">
+              <p><img src="img/sm/partner_logo_kendra.jpg" alt=""></p>
+            </div>
+          </div>
+          <div class="large-3 medium-3 small-3 columns">
+            <div class="">
+              <p><img src="img/sm/logo_p2p-next.jpg" alt=""></p>
+            </div>
+          </div>
+          <div class="large-3 medium-3 small-3 columns">
+            <div class="">
+              <p><img src="img/sm/saracen-logo.jpg" alt=""></p>
+            </div>
+          </div>
+        </div>
+
+
+      </div>
+    </div>
+
+
+      </div>
+    </div>
+
+
+
+
+
+
+    <div class="row">
+      <div class="large-12 medium-12 columns">
+        <h2>Projects</h2>
+<p>Some sample projects to give an idea of the bredth of our experience in Drupal
+development, content migration, design, site building, site audit, infrastructure and security:</p>
+        <div class="row">
+
+          <div class="large-3 medium-3 small-6 columns">
+            <div class="panel">
+              <h3>TrueTube <small>Educational Resource</small></h3>
+              <p><img src="img/sm/screens/truetube.jpg" alt="">
+
+            <span class="label">Development</span>
+            <span class="label">Content Migration</span>
+              </p>
+            </div>
+          </div>
+          <div class="large-3 medium-3 small-6 columns">
+            <div class="panel">
+              <h3>V&amp;A <small>Blogs</small></h3>
+             <p><img src="img/sm/screens/vam_blogs.jpg" alt="">
+            <span class="label">Development</span>
+            <span class="label">Content Migration</span>
+             </p>
+
+            </div>
+          </div>
+
+
+          <div class="large-3 medium-3 small-6 columns">
+            <div class="panel">
+              <h3>MTV UK <small>Rebuild</small></h3>
+              <p><img src="img/sm/screens/mtv_co_uk.jpg" alt="">
+            <span class="label">Development</span>
+            <span class="label">Content Migration</span>
+              </p>
+            </div>
+          </div>
+
+
+          <div class="large-3 medium-3 small-6 columns">
+            <div class="panel">
+              <h3>V&amp;A <small>Membership</small></h3>
+              <p><img src="img/sm/screens/vam_membership.jpg" alt="">
+            <span class="label">Site build</span>
+
+            <span class="label">Commerce</span></p>
+            </div>
+          </div>
+
+        </div>
+
+
+        <div class="row">
+          <div class="large-3 medium-3 small-6 columns">
+            <div class="panel">
+              <h3>The Lancet <small>Conferences</small></h3>
+              <p><img src="img/sm/screens/lancet_conferences.jpg" alt="">
+            <span class="label">Site build</span>
+     <span class="label">Development</span>
+              </p>
+            </div>
+          </div>
+          <div class="large-3 medium-3 small-6 columns">
+            <div class="panel">
+              <h3>The Lancet <small>Global Health</small></h3>
+              <p><img src="img/sm/screens/lancet_global_health.jpg" alt="">
+            <span class="label">Site build</span>
+     <span class="label">Development</span>
+              </p>
+
+            </div>
+          </div>
+          <div class="large-3 medium-3 small-6 columns">
+            <div class="panel">
+              <h3>The Lancet <small>Middle East</small></h3>
+             <p><img src="img/sm/screens/lancet_middleeast.jpg" alt="">
+            <span class="label">Site build</span>
+     <span class="label">Development</span>
+
+             </p>
+
+            </div>
+          </div>
+          <div class="large-3 medium-3 small-6 columns">
+            <div class="panel">
+              <h3>The Lancet <small>Student</small></h3>
+              <p><img src="img/sm/screens/lancet_student.jpg" alt="">
+            <span class="label">Site build</span>
+     <span class="label">Development</span>
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="large-3 medium-3 small-6 columns">
+            <div class="panel">
+              <h3>Advent <small>Security</small></h3>
+              <p>
+                <img src="img/sm/screens/advent.jpg" alt="">
+                  <span class="label">Code Review</span>
+                  <span class="label">Security Audit</span>
+                </p>
+            </div>
+          </div>
+
+           <div class="large-3 medium-3 small-6 columns">
+            <div class="panel">              <h3>Sandstrom <small>Blog</small></h3>
+
+              <p><img src="img/sm/screens/sandstrom.jpg" alt="">
+            <span class="label">Development</span>
+
+              </p>
+            </div>
+          </div>
+
+          <div class="large-3 medium-3 small-6 columns">
+            <div class="panel">
+                            <h3>Gay Star <small>News</small></h3>
+
+             <p><img src="img/sm/screens/gaystarnews.jpg" alt=""></p>
+     <span class="label">Performance Enhancements</span>
+            </div>
+          </div>
+          <div class="large-3 medium-3 small-6 columns">
+            <div class="panel">
+                            <h3>IFT <small>Support</small></h3>
+
+              <p><img src="img/sm/screens/ift.jpg" alt="">
+     <span class="label">Technical Support</span>
+              </p>
+
+            </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="large-3 medium-3 small-6 columns">
+            <div class="panel">
+                            <h3>Core Learning <small>LMS</small></h3>
+
+              <p><img src="img/sm/screens/lms.jpg" alt="">
+            <span class="label">3rd Party Integration</span>
+
+              </p>
+            </div>
+          </div>
+          <div class="large-3 medium-3 small-6 columns">
+            <div class="panel">
+                            <h3>Plastbook <small>Social&nbsp;Network</small></h3>
+
+             <p><img src="img/sm/screens/plastbook.jpg" alt="">
+            <span class="label">Development</span>
+
+             </p>
+
+            </div>
+          </div>
+          <div class="large-3 medium-3 small-6 columns">
+            <div class="panel">              <h3>PrintX <small>Marketplace</small></h3>
+
+              <p><img src="img/sm/screens/printx.jpg" alt="">
+                          <span class="label">Development</span>
 </p>
-        <p>I choose open source because I believe in Freedom. Open source gives us adaptability, interoperability, and options. It helps us prepare for the future.
-</p><p>
-Proprietary systems and data formats create lock-in where vendors build their business models around selling you licenses to access your own systems and data.
-</p><p>
-We do things differently. We build our business models on providing value. </p>
-<p>We like to work on projects that do good. Our clients like to work with us because of the insight we offer, our methodical reasoning, and ability to generate novel solutions. </p>
-<hr><p>
- For writings about technology, web development (Drupal, PHP, Ruby),
-                 DevOps, generative art and creative coding, creator of Cyril
-                 programming language, hardware hacker, and music, see my
-                 <a href="http://darrenmothersele.com">personal webiste</a>.
-</p>
-<hr>
-<p>
- For more information on Drupal Cloud DevOps, see
-                 <a href="http://www.apiarycloud.com">Apiary</a>.
-</p>
+            </div>
+          </div>
+
+          <div class="large-3 medium-3 small-6 columns">
+            <div class="panel">
+
+             <h3>Drupal <small>HackerNews clone</small></h3>
+
+              <p><img src="img/sm/screens/drudev.jpg" alt="">
+            <span class="label">Development</span>
+              </p>
+            </div>
+          </div>
+
+        </div>
 
 
-<hr>
+        <div class="row">
+          <div class="large-3 medium-3 small-6 columns">
+            <div class="panel">
+                            <h3>Apiary <small>DevOps</small></h3>
+
+              <p><img src="img/sm/screens/apiary.jpg" alt="">
+            <span class="label">DevOps</span>
+            <span class="label">Infrastructure</span>
+
+              </p>
+            </div>
+          </div>
+          <div class="large-3 medium-3 small-6 columns">
+            <div class="panel">
+                            <h3>Darren <small>Blog</small></h3>
+
+              <p><img src="img/sm/screens/darren.jpg" alt="">
+            <span class="label">Site build</span>
+            <span class="label">Design</span>
+
+              </p>
+            </div>
+          </div>
+          <div class="large-3 medium-3 small-6 columns">
+            <div class="panel">
+                            <h3>PlaceBee <small>Service</small></h3>
+
+              <p><img src="img/sm/screens/placebee.jpg" alt="">
+            <span class="label">Development</span>
+
+              </p>
+            </div>
+          </div>
+          <div class="large-3 medium-3 small-6 columns">
+            <div class="panel">
+                            <h3>Colemans <small>Deli</small></h3>
+
+              <p><img src="img/sm/screens/colemans.jpg" alt="">
+            <span class="label">Design</span>
+            <span class="label">Site build</span>
+
+              </p>
+            </div>
+          </div>
+
+        </div>
 
 
 
-</div>
+
+      </div>
+    </div>
+
+
+    <div class="row">
+      <div class="large-12 columns">
+        <h2>About Us</h2>
+        <h3 class="subheader">Darren Mothersele</h3>
+        <p>Ideation Networks was started by Darren Mothersele. He's joined by
+          a selection of other top freelancers from time-to-time to work directly
+          on Ideation Network's own projects, and outside of this provides consultancy and
+          support for other agencies with Drupal.
+        </p>
+        <p> For writings about technology, web development (Drupal, PHP, Ruby), DevOps, generative art and creative coding, see
+          <a href="http://darrenmothersele.com">Darren's personal website</a>. </p>
+        <p> For more information on Drupal Cloud DevOps, see
+          <a href="http://www.apiarycloud.com">Apiary</a>. </p>
+        <h3 class="subheader">Alice Richmond</h3>
+        <p>Alice Richmond recently joined Ideation Networks and
+          brings a vast amount of experience in direct marketing, printing
+          and design. See some of her work and her latest writings on
+          her <a href="http://www.alicerichmond.co.uk">personal site</a>.</p>
+      </div>
+    </div>
 
 
 
 
-
-
-
-    </div> <!-- end information -->
-</div> <!-- end l-content -->
-
-
-
-
-</body>
+    <script src="bower_components/jquery/dist/jquery.min.js"></script>
+    <script src="bower_components/foundation/js/foundation.min.js"></script>
+    <script src="js/app.js"></script>
+  </body>
 </html>
