--- a/index.html
+++ b/index.html
@@ -1,29 +1,23 @@
-<!doctype html>
-<html lang="en">
-<head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Ideation Networks</title>
-<link rel="stylesheet" href="pure-min.css">
-<link rel="stylesheet" href="ideation-networks.css">
-</head>
-<body>
+---
+layout: default
+---
 
-<div class="header">
-    <img src="ideation-networks-logo.png" alt="Ideation Networks Logo">
-</div>
-
-<div class="page">
-	
-<p>
-	Consultancy for Drupal agencies, large Drupal deployments and flagship Drupal websites since&nbsp;2007.
+<section id="one">
+  <header class="major">
+    <h2>Technology
+    for Humans.</h2>
+  </header>
+  <p>
+Ideation Networks began in 2007 as a specialist Drupal consultancy and has provided software development and training for Drupal agencies, large Drupal deployments and flagship Drupal websites.
 </p>
 <p>
-	Specialists in maintainable and scalable website development and security&nbsp;issues.
-</p>
+  We specialise in maintainable and scalable website development, cloud
+  infrastructure, and ideation.
+  </p>
+  <p>
 
-
-</div>
-
-</body>
-</html>
+  </p>
+  <ul class="actions">
+    <li><a href="mailto:info@ideationnetworks.com" class="button">Contact us</a></li>
+  </ul>
+</section>
