--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: default
 <section id="one">
   <header class="major">
     <h2>Technology
-    for Humans.</h2>
+    for People.</h2>
   </header>
   <p>
 Ideation Networks began in 2007 as a specialist Drupal consultancy and has provided software development and training for Drupal agencies, large Drupal deployments and flagship Drupal websites.
