--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@ layout: default
 
 <section id="one">
   <header class="major">
-    <h2>Technology
-    for People.</h2>
+    <h2>Human-centric <br>Information Technology</h2>
   </header>
   <p>
 Ideation Networks began in 2007 as a specialist Drupal consultancy and has provided software development and training for Drupal agencies, large Drupal deployments and flagship Drupal websites.
