--- a/index.html
+++ b/index.html
@@ -20,3 +20,120 @@ Ideation Networks began in 2007 as a specialist Drupal consultancy and has provi
     <li><a href="mailto:info@ideationnetworks.com" class="button">Contact us</a></li>
   </ul>
 </section>
+
+
+
+            <section>
+              <h4>Why work with us?</h4>
+
+                  <ul>
+                    <li>Drupal leaders: Over 8 years experience working on large flagship Drupal
+sites. Regular presenters at Drupal meetups, camps and conference.</li>
+                    <li>Experience running large projects, and 1,000,000+ item content migrations. </li>
+                    <li>Small team, virtual office, fully open-source, and low overheads, so more of your budget goes
+into building great features for your site. </li>
+<li>We run and contribute to open-source projects. By giving back to the
+community, you
+ensure the sustainability of the projects your site depends on. </li>
+<li>Open-source = no vendor lock-in. </li>
+<li>Clear and honest pricing. </li>
+                  </ul>
+
+            </section>
+
+
+
+          <section id="two">
+            <h2>Our Work</h2>
+            <div class="row">
+              <article class="6u 12u$(xsmall) work-item">
+                <img src="images/thumbs/05.jpg" alt="" />
+                <h3>Viacom International Media Networks</h3>
+                <p>Provided expertise and development support during rebuild of MTV.co.uk. Returned to consult on AWS migration issues and CMS upgrades.</p>
+              </article>
+              <article class="6u$ 12u$(xsmall) work-item">
+                <img src="images/thumbs/04.jpg" alt="" />
+                <h3>TrueTube, CTVC</h3>
+                <p>Award winning educational video platform.
+                 CMS, lessons plans and learning resources.
+Video management with transcoding of video to multiple formats. </p>
+              </article>
+              <article class="6u 12u$(xsmall) work-item">
+                <img src="images/thumbs/01.jpg" alt="" />
+                <h3>The Lancet Global Health, Elsevier</h3>
+                <p>Multi-tenant blogging platform and many other projects over 8 years. </p>
+              </article>
+              <article class="6u$ 12u$(xsmall) work-item">
+                <img src="images/thumbs/06.jpg" alt="" />
+                <h3>V&amp;A</h3>
+                <p>Drupal Commerce based subscription service for selling membership packages.</p>
+              </article>
+              <article class="6u 12u$(xsmall) work-item">
+                <img src="images/thumbs/03.jpg" alt="" />
+                <h3>The Lancet USA, Elsevier</h3>
+                <p>The Lancet selected us as Drupal experts, then continued to work with us as we proved we could work professionally and iterate quickly. </p>
+              </article>
+              <article class="6u$ 12u$(xsmall) work-item">
+                <img src="images/thumbs/02.jpg" alt="" />
+                <h3>The Lancet Student, Elsevier</h3>
+                <p>The Lancet selected us as Drupal experts, then continued to work with us as we proved we could work professionally and iterate quickly.</p>
+              </article>
+            </div>
+
+          </section>
+
+
+            <section>
+              <h4>Our clients love us...</h4>
+
+<p>
+We've had the privilege of working on projects for clients such as Paul McCartney, MTV, Victoria &amp; Albert Museum, Elsevier, Dixons, Santander, and consulted on EU-funded research projects P2P Next and Saracen.</p>
+<blockquote>
+&quot;Darren really knows his onions.&quot;<br>
+— Paul Reeves (Senior Developer, Viacom International Media Networks)</blockquote>
+<blockquote>
+&quot;I must say a very big thank you to @mothersele for being amazing with Drupal&quot;
+<br>
+— Helena Markou (Head of New Business, Perini)</blockquote>
+<blockquote>
+&quot;Advanced Drupal training workshop today with the very clever @mothersele Is there anything he doesn't know?!&quot;<br>
+— @catch_digital
+</blockquote>
+
+              <blockquote>&quot;Darren is very responsive and personable; always willing to adapt to our requirements, while offering his advice and experience. The quality of his work has been very high and I have enjoyed working with him.&quot;<br>
+— Zoë Mullan (Editor, The Lancet Global Health)</blockquote>
+<blockquote>
+&quot;Darren has worked on Lancet website projects for many years. He most recently developed the Lancet Global Health's blog site for us. As always, his work was excellent, thorough, and to our specifications.&quot;<br>
+— Justine Davies (Editor in Chief, Lancet Diabetes and Endocrinology) </blockquote>
+
+            </section>
+
+
+
+
+          <section id="three">
+            <h2>Get In Touch</h2>
+            <!-- <p></p> -->
+            <div class="row">
+              <div class="8u 12u$(small)">
+              </div>
+              <div class="4u$ 12u$(small)">
+                <ul class="labeled-icons">
+                  <li>
+                    <h3 class="icon fa-mobile"><span class="label">Phone</span></h3>
+                    +44 20 3389 9304
+                  </li>
+                  <li>
+                    <h3 class="icon fa-envelope-o"><span class="label">Email</span></h3>
+                    <a href="#">info@ideationnetworks.com</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </section>
+
+
+
+
+
+
