--- a/index.html
+++ b/index.html
@@ -2,10 +2,9 @@
 layout: default
 ---
 
+<h1>Ideation Networks</h1>
+
 <section id="one">
-  <header class="major">
-    <h2>Human-centric <br>Information Technology</h2>
-  </header>
   <p>
 Ideation Networks began in 2007 as a specialist Drupal consultancy and has provided software development and training for Drupal agencies, large Drupal deployments and flagship Drupal websites.
 </p>
@@ -20,26 +19,6 @@ Ideation Networks began in 2007 as a specialist Drupal consultancy and has provi
     <li><a href="mailto:info@ideationnetworks.com" class="button">Contact us</a></li>
   </ul>
 </section>
-
-
-
-            <section>
-              <h4>Why work with us?</h4>
-
-                  <ul>
-                    <li>Drupal leaders: Over 8 years experience working on large flagship Drupal
-sites. Regular presenters at Drupal meetups, camps and conference.</li>
-                    <li>Experience running large projects, and 1,000,000+ item content migrations. </li>
-                    <li>Small team, virtual office, fully open-source, and low overheads, so more of your budget goes
-into building great features for your site. </li>
-<li>We run and contribute to open-source projects. By giving back to the
-community, you
-ensure the sustainability of the projects your site depends on. </li>
-<li>Open-source = no vendor lock-in. </li>
-<li>Clear and honest pricing. </li>
-                  </ul>
-
-            </section>
 
 
 
@@ -131,9 +110,3 @@ We've had the privilege of working on projects for clients such as Paul McCartne
               </div>
             </div>
           </section>
-
-
-
-
-
-
