--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
             <div class="mt-12 -mb-16 sm:-mb-48 lg:m-0 lg:relative">
                 <div class="mx-auto max-w-md px-4 sm:max-w-2xl sm:px-6 lg:max-w-none lg:px-0">
                     <!-- Illustration taken from Lucid Illustrations: https://lucid.pixsellz.io/ -->
-                    <img class="w-full lg:absolute lg:inset-y-0 lg:left-0 lg:h-full lg:w-auto lg:max-w-none" src="https://tailwindui.com/img/component-images/cloud-illustration-teal-cyan.svg" alt="">
+                    <img class="w-full lg:absolute lg:inset-y-0 lg:left-0 lg:h-full lg:w-auto lg:max-w-none"
+                         src="cloud-illustration-teal-cyan.svg" alt="">
                 </div>
             </div>
         </div>
@@ -49,7 +50,7 @@
             Your partner for front-end engineering expertise
         </p>
         <p class="mt-5 max-w-prose mx-auto text-xl text-gray-500">
-            With over 20 years of software development experience, and a track record of
+            Established in 2007 and with a track record of
             delivery to spec, on time, and on budget. Ideation Networks keeps abreast of the
             rapidly changing technology landscape and effectively sifts through the hype
             to integrate the useful.
