--- a/index.html
+++ b/index.html
@@ -236,7 +236,8 @@ Tech leadership through active participation in open-source communities
                     Our clients love us
                 </h2>
                 <p class="mt-3 max-w-3xl text-lg text-gray-500">
-                    We've had the privilege of working on projects for clients such as Paul McCartney,
+                    We've had the privilege of working on projects for clients such as
+                    BFI (British Film Institute), Moby, Paul McCartney,
                     MTV, Victoria & Albert Museum, Elsevier, Dixons, Santander, and consulted on
                     EU-funded research projects P2P Next, Saracen, and Bloomen.
                 </p>
@@ -256,24 +257,25 @@ Tech leadership through active participation in open-source communities
             <div class="mt-8 grid grid-cols-2 gap-0.5 md:grid-cols-3 lg:mt-0 lg:grid-cols-2">
                 <div class="col-span-1 flex justify-center py-8 px-8 bg-gray-50">
 
-                    <img src="01.jpg" height="217" width="370"/></div>
+
+                    <img src="bfi-screenshot.png" /></div>
                 <div class="col-span-1 flex justify-center py-8 px-8 bg-gray-50">
 
-                    <img src="02.jpg" height="217" width="370"/></div>
-                <div class="col-span-1 flex justify-center py-8 px-8 bg-gray-50">
-
-                    <img src="03.jpg" height="217" width="370"/></div>
-                <div class="col-span-1 flex justify-center py-8 px-8 bg-gray-50">
-
-
-                    <img src="04.jpg" height="217" width="370"/></div>
-                <div class="col-span-1 flex justify-center py-8 px-8 bg-gray-50">
-
-                    <img src="05.jpg" height="217" width="370"/></div>
+                    <img src="02.jpg" /></div>
                 <div class="col-span-1 flex justify-center py-8 px-8 bg-gray-50">
 
 
-                    <img src="06.jpg" height="217" width="370"/></div>
+                    <img src="moby-screenshot.png" /></div>
+                <div class="col-span-1 flex justify-center py-8 px-8 bg-gray-50">
+
+                    <img src="truetube-screenshot.png" /></div>
+                <div class="col-span-1 flex justify-center py-8 px-8 bg-gray-50">
+
+                    <img src="05.jpg" /></div>
+                <div class="col-span-1 flex justify-center py-8 px-8 bg-gray-50">
+
+
+                    <img src="06.jpg"/></div>
             </div>
         </div>
     </div>
