--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
                         <span class="pb-3 block bg-clip-text text-transparent bg-gradient-to-r from-teal-200 to-cyan-400 sm:pb-5">build software.</span>
                     </h1>
                     <p class="text-base text-gray-300 sm:text-xl lg:text-lg xl:text-xl">
-                        Front-end engineering specialists.
-                        Experience building scalable front-end architectures,
+                        Web app engineering specialists.
+                        Experience building scalable web-app architectures,
                         and improving software delivery performance.
                     </p>
                 </div>
@@ -47,7 +47,7 @@
             Deliver better
         </h2>
         <p class="mt-2 text-3xl font-extrabold text-gray-900 tracking-tight sm:text-4xl">
-            Your partner for front-end engineering expertise
+            Your partner for engineering expertise
         </p>
         <p class="mt-5 max-w-prose mx-auto text-xl text-gray-500">
             Established in 2007 and with a track record of
@@ -291,7 +291,7 @@ Tech leadership through active participation in open-source communities
         <div class="mt-12 border-t border-gray-200 py-8">
             <p class="text-base text-gray-400 xl:text-center">
                 &copy;
-                2007-2021 Ideation Networks Ltd. All rights reserved.
+                2007-2025 Ideation Networks Ltd. All rights reserved.
             </p>
         </div>
     </div>
